--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  
-    <title>Grilli - Amazing and Delicious Food</title>
-    <meta name="title" content="Grilli - Amazing and Delicious Food">
-    <meta name="description" content=""
-  </head>
-  <body>
-    
-  </body>
-  </html>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+        <title>Grilli - Amazing and Delicious Food</title>
+        <!-- 
+    - primary meta tags
+  -->
+        <meta name="title" content="Grilli - Amazing and Delicious Food" />
+        <meta
+            name="description"
+            content="This is a Restaurant html template made by codewithsadee"
+        />
+
+        <!--
+- favicon 
+-->
+<link rel="shortcut icon" href="./favicon.svg" type="image/svg*xml">
+
+<!--
+- google font link
+-->
+    </head>
+    <body></body>
+</html>
