--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
 <!--
 - google font link
 -->
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
+
+<!--
+- custom css link
+-->
+<link rel="stylesheet" href="./assets/css/style.css">
+
+<!--
+- preload images
+-->
+
     </head>
     <body></body>
 </html>
