--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -16,24 +16,31 @@
         <!--
 - favicon 
 -->
-<link rel="shortcut icon" href="./favicon.svg" type="image/svg*xml">
+        <link rel="shortcut icon" href="./favicon.svg" type="image/svg*xml" />
 
-<!--
+        <!--
 - google font link
 -->
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap"
+            rel="stylesheet"
+        />
 
-<!--
+        <!--
 - custom css link
 -->
-<link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/style.css" />
 
-<!--
+        <!--
 - preload images
 -->
+
+<link rel="preload" as="image" href="./assets/images/hero-slider-1.jpg">
+<link rel="preload" as="image" href="./assets/images/hero-slider-2.jpg">
+<link rel="preload" as="image" href="./assets/images/hero-slider-3.jpg">
 
     </head>
     <body></body>
