--- a/index.html
+++ b/index.html
@@ -52,6 +52,82 @@
       <p class="">Grilli</p>
     </div>
 
+    <!-- 
+    - #TOP BAR 
+  -->
+
+    <div class="top-bar">
+      <div class="container">
+        <address class="topbar-item">
+          <div class="icon">
+            <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
+            <span class="span">
+              Restaurant St, Delicious City, London 9578, UK
+            </span>
+          </div>
+        </address>
+
+        <div class="separator"></div>
+
+        <div class="topbar-item-2"></div>
+        <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
+
+        <div>
+          <span class="span">Daily : 8.00 am to 10.00 pm </span>
+        </div>
+
+        <a href="tel:" class="topbar-item-"></a>
+        <div class="icon">
+          <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
+        </div>
+
+        <span class="span">+1 123 456 7890</span>
+      </a>
+    
+
+      <div class="separator"></div>
+
+      <a href="mailto: booking@restaurant.com
+      " class="topbar-item-"></a>
+        <div class="icon">
+          <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
+        </div>
+
+        <span class="span">booking@restaurant.com
+        </span>
+      </a>
+    
+
+      </div>
+    </div>
+
+    <!--
+    - #HEADER
+  -->
+
+    <header class="header" data-header>
+      <div class="container">
+
+        <button class="close-bnt" aria-label="close menu" data-nav-toggler>
+          <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
+        </button>
+
+        <a href="#" class="logo">
+          <img src="./assets/images/logo.svg" width="160" height="50" alt="Grilli - Home" />
+        </a>
+
+        <ul class="navbar-list">
+
+          <li class="navbar-item">
+            <a href="" class="navbar-link hover-underline active">Home</a>
+</li>
+        <nav class="navbar" data-navbar></nav>
+
+        </nav>
+        </div>
+
+    </header>
+
     <!--
       - custom js link
       -->
